fixed failing tests
Signed-off-by: Santhosh Gandhe <1909520+san81@users.noreply.github.com>