@@ -4,6 +4,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.opensearch.dataprepper.event.TestEventKeyFactory;
@@ -17,6 +19,7 @@ import org.opensearch.dataprepper.model.record.Record;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -24,12 +27,8 @@ import java.util.Map;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TranslateProcessorTest {
@@ -52,20 +51,18 @@ class TranslateProcessorTest {
         assertThat(translatedRecords.get(0).getData().get("targetField", String.class), is("mappedValue1"));
     }
 
-    @Test
-    void test_dynamic_key_translation() throws IOException {
-        when(expressionEvaluator.evaluate(eq("user.%{type}.id"), any(Event.class))).thenReturn("admin");
-
+    @ParameterizedTest
+    @CsvSource({"admin,mappedValue1", "user,mappedValue2"})
+    void test_dynamic_key_translation(String replaceValue, String valueToAssert) throws IOException {
         TranslateProcessor processor = createProcessor("translate_dynamic_key.json");
         Map<String, Object> data = new HashMap<>();
-        data.put("type", "admin");
-        data.put("user.admin.id", "admin");
+        data.put("type", replaceValue);
+        data.put("user." + replaceValue + ".id", replaceValue);
         Record<Event> record = buildRecordWithEvent(data);
 
         List<Record<Event>> translatedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
-
         assertTrue(translatedRecords.get(0).getData().containsKey("targetField"));
-        assertThat(translatedRecords.get(0).getData().get("targetField", String.class), is("mappedValue1"));
+        assertEquals(valueToAssert, translatedRecords.get(0).getData().get("targetField", String.class));
     }
 
     @Test
@@ -91,16 +88,17 @@ class TranslateProcessorTest {
     @Test
     void test_nested_path_translation() throws IOException {
         TranslateProcessor processor = createProcessor("translate_nested_path.json");
-        Map<String, Object> testJson = Map.of("collection", List.of(
+        Map<String, Object> testJson = new HashMap<>();
+        testJson.put("collection", new ArrayList<>(List.of(
                 Map.of("sourceField", "key1"),
-                Map.of("sourceField", "key2")));
+                Map.of("sourceField", "key2"))));
         Record<Event> record = buildRecordWithEvent(testJson);
 
         List<Record<Event>> translatedRecords = (List<Record<Event>>) processor.doExecute(Collections.singletonList(record));
 
-        List<Map<String, Object>> expected = List.of(
+        List<Map<String, Object>> expected = new ArrayList<>(List.of(
                 Map.of("sourceField", "key1", "targetField", "mappedValue1"),
-                Map.of("sourceField", "key2", "targetField", "mappedValue2"));
+                Map.of("sourceField", "key2", "targetField", "mappedValue2")));
         assertThat(translatedRecords.get(0).getData().get("collection", ArrayList.class), is(expected));
     }
 
@@ -109,7 +107,12 @@ class TranslateProcessorTest {
             if (is == null) {
                 throw new IOException("Config file not found: " + jsonFile);
             }
-            return objectMapper.readValue(is, TranslateProcessorConfig.class);
+            TranslateProcessorConfig config = objectMapper.readValue(is, TranslateProcessorConfig.class);
+            config.hasMappings(); // Trigger parsing of mappings
+            for (MappingsParameterConfig mappingConfig : config.getCombinedMappingsConfigs()) {
+                mappingConfig.parseMappings(); // Parse each mapping configuration
+            }
+            return config;
         }
     }
 
@@ -144,21 +147,21 @@ class TranslateProcessorTest {
             TranslateProcessor processor = createProcessor("translate_dynamic_key.json");
 
             // First call
-            when(expressionEvaluator.evaluate(eq("user.%{type}.id"), any(Event.class))).thenReturn("admin");
             Map<String, Object> data1 = new HashMap<>();
             data1.put("type", "admin");
             data1.put("user.admin.id", "admin");
-            processor.doExecute(Collections.singletonList(buildRecordWithEvent(data1)));
 
             // Second call with different type
-            when(expressionEvaluator.evaluate(eq("user.%{type}.id"), any(Event.class))).thenReturn("user");
             Map<String, Object> data2 = new HashMap<>();
             data2.put("type", "user");
-            data2.put("user.user.id", "user123");
-            processor.doExecute(Collections.singletonList(buildRecordWithEvent(data2)));
+            data2.put("user.user.id", "user");
+            Collection<Record<Event>> output = processor.doExecute(List.of(buildRecordWithEvent(data1), buildRecordWithEvent(data2)));
 
             // Verify dynamic keys are resolved each time
-            verify(expressionEvaluator, times(2)).evaluate(eq("user.%{type}.id"), any(Event.class));
+            assertEquals(2, output.size());
+            List<Record<Event>> outputRecords = (List<Record<Event>>) output;
+            assertEquals("mappedValue1", outputRecords.get(0).getData().get("targetField", String.class));
+            assertEquals("mappedValue2", outputRecords.get(1).getData().get("targetField", String.class));
         }
     }
 
